--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,15 @@
             <version>0.5.0-alpha</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/org.neo4j.gds/annotations -->
 <!--        <dependency>-->
